Update index.html to add scaling info to the inputs

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 		<section>
 			<h2>Code</h2>
 			<div class="space-Below generator-input-params">
-				<label for="amountInput">amount</label>
+				<label for="amountInput">amount (scales linearly)</label>
 				<input id="amount" name="amountInput" value="1" placeholder="1"></input>
-				<label for="inputSizesInput">input sizes or types</label>
+				<label for="inputSizesInput">input sizes or types (scales exponentially)</label>
 				<input id="inputSizes" name="inputSizesInput" value="4, 4" placeholder="4, 4"></input>
-				<label for="outputSizesInput">output sizes or types</label>
+				<label for="outputSizesInput">output sizes or types (scales linearly)</label>
 				<input id="outputSizes" name="outputSizesInput" value="5" placeholder="8"></input>
 			</div>
 			<label for="codeInput">Code Input</label>
