added copy buttons to the docs

--- a/docs.html
+++ b/docs.html
@@ -104,9 +104,12 @@
 locations: 1
 input sizes: 4, 4
 output sizes: 5</pre>
-							<pre>([x, y]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x, y]) => {
 	return [x + y];
-}</pre>
+}</code></pre>
 						</li>
 						<li>
 							<h4>Subtraction</h4>
@@ -114,9 +117,12 @@ output sizes: 5</pre>
 locations: 1
 input sizes: 4, 4
 output sizes: INT_5</pre>
-							<pre>([x, y]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x, y]) => {
 	return [x - y];
-}</pre>
+}</code></pre>
 						</li>
 					</ol>
 				</li>
@@ -129,12 +135,15 @@ output sizes: INT_5</pre>
 locations: 1
 input sizes: 8
 output sizes: 4, 4, 4</pre>
-							<pre>([x]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x]) => {
 	const digit1 = x % 10;
 	const digit2 = Math.floor(x/10) % 10;
 	const digit3 = Math.floor(x/100) % 10;  
 	return [digit1, digit2, digit3];
-}</pre>
+}</code></pre>
 						</li>
 						<li>
 							<h4>3-digit Decimal Input To 8-bit Hexadecimal</h4>
@@ -142,9 +151,12 @@ output sizes: 4, 4, 4</pre>
 locations: 1
 input sizes: 4, 4, 4
 output sizes: 8</pre>
-							<pre>([digit1, digit2, digit3]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([digit1, digit2, digit3]) => {
 	return [digit1 + digit2 * 10 + digit3 * 100];
-}</pre>
+}</code></pre>
 						</li>
 						<li>
 							<h4>Sign-magnitude Integer To Two's Complement Integer</h4>
@@ -153,9 +165,12 @@ output sizes: 8</pre>
 locations: 1
 input sizes: SM_INT_8
 output sizes: INT_8</pre>
-							<pre>([x]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x]) => {
 	return [x];
-}</pre>
+}</code></pre>
 						</li>
 						<li>
 							<h4>Bit Mask And Shift Left</h4>
@@ -163,11 +178,14 @@ output sizes: INT_8</pre>
 locations: 1
 input sizes: 4
 output sizes: 8</pre>
-							<pre>([x]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x]) => {
 	const bitShiftLeftAmount = 1;
 	const bitMask = 0b1111;
 	return [(x &amp; bitMask)&lt;&lt;bitShiftLeftAmount];
-}</pre>
+}</code></pre>
 						</li>
 						<li>
 							<h4>Bit Mask And Shift Right</h4>
@@ -175,11 +193,14 @@ output sizes: 8</pre>
 locations: 1
 input sizes: 4
 output sizes: 8</pre>
-							<pre>([x]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x]) => {
 	const bitShiftRightAmount = 1;
 	const bitMask = 0b1111;
 	return [((x &amp; bitMask)&lt;&lt;4)&gt;&gt;bitShiftRightAmount];
-}</pre>
+}</code></pre>
 						</li>
 					</ol>
 				</li>
@@ -194,10 +215,13 @@ output sizes: 8</pre>
 locations: 1
 input sizes: 8
 output sizes: 8</pre>
-							<pre>([x]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x]) => {
 	if(x == 0xff) return 0;
 	return [x + 1];
-}</pre>
+}</code></pre>
 						</li>
 						<li>
 							<h4>4-bit Counter With Overflow</h4>
@@ -206,7 +230,10 @@ output sizes: 8</pre>
 locations: 1
 input sizes: 4, 1, 1
 output sizes: 4</pre>
-							<pre>([position, isMoving, isDecrementing]) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([position, isMoving, isDecrementing]) => {
 	const maxPosition = 15;
 	const minPosition = 0;
 	const overflowValue = minPosition;
@@ -225,7 +252,7 @@ output sizes: 4</pre>
 		}
 	}
 	return [position];
-}</pre>
+}</code></pre>
 							<h4>Configurations</h4>
 							<ol>
 								<li>
@@ -234,10 +261,12 @@ output sizes: 4</pre>
 locations: 1
 input sizes: 4, 1, 1
 output sizes: 4</pre>
-	<pre>const maxPosition = 15;
+	<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">const maxPosition = 15;
 const minPosition = 0;
 const overflowValue = position;
-const underflowValue = position;</pre>
+const underflowValue = position;</code></pre>
 								</li>
 								<li>
 									<h4>6-bit Counter FSM With Overflow</h4>
@@ -245,10 +274,12 @@ const underflowValue = position;</pre>
 locations: 1
 input sizes: 6, 1, 1
 output sizes: 6</pre>
-	<pre>const maxPosition = 63;
+	<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">const maxPosition = 63;
 const minPosition = 0;
 const overflowValue = minPosition;
-const underflowValue = maxPosition;</pre>
+const underflowValue = maxPosition;</code></pre>
 								</li>
 								<li>
 									<h4>6-bit Counter FSM Without Overflow</h4>
@@ -256,10 +287,12 @@ const underflowValue = maxPosition;</pre>
 locations: 1
 input sizes: 6, 1, 1
 output sizes: 6</pre>
-	<pre>const maxPosition = 63;
+	<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">const maxPosition = 63;
 const minPosition = 0;
 const overflowValue = position;
-const underflowValue = position;</pre>
+const underflowValue = position;</code></pre>
 								</li>
 							</ol>
 						</li>
@@ -269,7 +302,10 @@ const underflowValue = position;</pre>
 locations: 1
 input sizes: 6, 1, 1
 output sizes: 6, 1</pre>
-								<pre>([position, isDecrementing, isResetting]) => {
+								<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([position, isDecrementing, isResetting]) => {
 	const maxPosition = 63;
 	const minPosition = 0;
 	if (isResetting != 0) {
@@ -285,7 +321,7 @@ output sizes: 6, 1</pre>
 		}
 	}
 	return [position, isDecrementing];
-}</pre>
+}</code></pre>
 						</li>
 						<li>
 							<h4>2-bit CPU</h4>
@@ -296,7 +332,10 @@ output sizes: 6, 1</pre>
 locations: 1
 input sizes: 2, 2, 2, 2, 1
 output sizes: 2, 2, 2, 2, 1</pre>
-								<pre>([programCounter, accumulator, addressRegister, instructionRegister, isCycleExecute]) => {
+								<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([programCounter, accumulator, addressRegister, instructionRegister, isCycleExecute]) => {
 	const assemblyProgram = [
 		{instruction: 1, address: 0}, // load the first value from programData into the accumulator
 		{instruction: 2, address: 1}, // subtract the second value of programData from the accumulator
@@ -331,7 +370,7 @@ output sizes: 2, 2, 2, 2, 1</pre>
 		}
 	}
 	return [programCounter, accumulator, addressRegister, instructionRegister, isCycleExecute];
-}</pre>
+}</code></pre>
 						</li>
 					</ol>
 				</li>
@@ -344,9 +383,12 @@ output sizes: 2, 2, 2, 2, 1</pre>
 locations: 16
 input sizes: 4
 output sizes: 4</pre>
-							<pre>([x], bankPosition) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x], bankPosition) => {
 	return [x == bankPosition ? 0xf : 0x0];
-}</pre>
+}</code></pre>
          <h4>Configurations</h4>
          <ol>
            <li>
@@ -364,11 +406,14 @@ output sizes: 4</pre>
 locations: 16
 input sizes: 
 output sizes: 4</pre>
-							<pre>([x], bankPosition) => {
+							<pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x], bankPosition) => {
   const values = [0x3, 0xc];
   const isActive = Math.floor(x/values.length) == bankPosition;
   return [!isActive ? 0x0 : values[x % values.length]];
-}</pre>
+}</code></pre>
 							<h4>Configurations</h4>
 							<ol>
 								<li>
@@ -382,9 +427,12 @@ output sizes: 4</pre>
 							<pre>
 locations: 16
 input sizes: 4, 4
-output sizes: 4</pre><pre>([x, y], bankPosition) => {
+output sizes: 4</pre><pre class="code-block-root">
+								<button class="copy-btn">Copy</button>
+								<code class="code-block">
+([x, y], bankPosition) => {
 	return [y == bankPosition ? x : 0x0];
-}</pre>
+}</code></pre>
 						</li>
 					</ol>
 				</li>
@@ -867,6 +915,7 @@ output sizes: 4</pre><pre>([x, y], bankPosition) => {
 			</ul>
 		</aside>
 	</footer>
+	<script type="module" src="./js/docs.js"></script>
 </body>
 
 </html>
