fixed one unneccessary newline in one of the docs code blocks

--- a/docs.html
+++ b/docs.html
@@ -344,8 +344,7 @@ output sizes: 2, 2, 2, 2, 1</pre>
 locations: 16
 input sizes: 4
 output sizes: 4</pre>
-							<pre class="code-block-root has-copy-btn has-copy-btn"><code class="code-block">
-([x], bankPosition) => {
+							<pre class="code-block-root has-copy-btn has-copy-btn"><code class="code-block">([x], bankPosition) => {
 	return [x == bankPosition ? 0xf : 0x0];
 }</code></pre>
          <h4>Configurations</h4>
