added a missing input size value to the docs at the horizontal and grid driver

--- a/docs.html
+++ b/docs.html
@@ -362,7 +362,7 @@ output sizes: 4</pre>
 							<h4>Horizontal Segment AND-grid Driver For 4-LED Plotters</h4>
 							<pre>
 locations: 16
-input sizes: 
+input sizes: 4
 output sizes: 4</pre>
 							<pre class="code-block-root has-copy-btn"><code class="code-block">([x], bankPosition) => {
   const values = [0x3, 0xc];
