added presets to the UI

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 	<main>
 		<hr/>
 		<section>
+			<h2>Presets</h2>
+			<div id="preset-selector">
+
+			</div>
+		</section>
+		<section>
 			<h2>Code</h2>
 			<div class="space-Below generator-input-params">
 				<label for="amountInput">amount (scales linearly)</label>
