--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			<div id="preset-selector">
 
 			</div>
+			<h3 id="preset-name"></h3>
+			<p id="preset-description"></p>
 		</section>
 		<section>
 			<h2>Code</h2>
