--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 		<hr />
 		<section>
 			<h2>Generated Data</h2>
+			<button id="recursive-copy-button">Copy All data</button>
+			<p>Copying all data requires my <a href="https://github.com/SP4CEBARsystems/clipboard-stack">Clipboard Stack</a> macro.</p>
 			<div id="bank-data-output"></div>
 		</section>
 		<hr />
