Changed the link to the clipboard stack GitHub page to open on a new tab

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<section>
 			<h2>Generated Data</h2>
 			<button id="recursive-copy-button">Copy All data</button>
-			<p>Copying all data requires my <a href="https://github.com/SP4CEBARsystems/clipboard-stack">Clipboard Stack</a> macro.</p>
+			<p>Copying all data requires my <a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard Stack</a> macro.</p>
 			<div id="bank-data-output"></div>
 		</section>
 		<hr />
