Added the bank count display, added pleural-string-fixing methods to extended math

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 			<p id="bank-statistics"></p>
 			<p>Elapsed: <span id="elapsed-time-display">N/A</span></p>
 			<p>Output: <span id="output">N/A</span></p>
+			<p id="bank-count-display"></p>
 		</section>
 		<hr />
 		<section>
