Added a "Two's Complement Integer To Sign-magnitude Integer" preset, and updated the "an underlying system seems to be defect" message in the docs at the "Sign-magnitude Integer To Two's Complement Integer" example with a more precise description of the issue found

--- a/docs.html
+++ b/docs.html
@@ -148,7 +148,7 @@ output sizes: 8</pre>
 						</li>
 						<li>
 							<h4>Sign-magnitude Integer To Two's Complement Integer</h4>
-							(an underlying system seems to be defect)
+							(currently, the type of input values is not evaluated, so only the positive half of this conversion will only be useful)
 							<pre>
 locations: 1
 input sizes: SM_INT_8
