Added a table with an overview of input and output bits that is generated with each data generation

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 			<p>Feel free to simplify the circuit in your own implementation.</p>
 		</section>
 		<hr />
+		<section>
+			<h2>IO Overview</h2>
+			<h3>Input</h3>
+			<div id="bank-input-type-table"></div>
+			<h3>Output</h3>
+			<div id="bank-output-type-table"></div>
+		</section>
+		<hr />
 		
 		<!-- define symbol in hidden svg document -->
 		<!-- <svg style="display: none" version="2.0">
