Added a preset type display to be shown when a preset is loaded

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			</div>
 			<h3 id="preset-name"></h3>
 			<p id="preset-description"></p>
+			<p id="preset-type"></p>
 		</section>
    <hr />
 		<section>
