Update index.html to mention Gboard as an alternative for copying all data at once

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<hr />
 			<h2>Generated Data</h2>
 			<button id="recursive-copy-button">Copy All data</button>
-			<p>Copying all data requires my <a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard Stack</a> macro.</p>
+			<p>Copying all data requires my <a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard Stack</a> macro. Or other software that can track fast clipboard changes like Google's GBoard app (Windows + V is too slow to keep up).</p>
 			<div id="bank-data-output"></div>
 		</section>
 		<section class="initially-hidden">
