Greyed out the preset colors, spaced out the hr elements, widened the code input section to the full page width, sized up the generate button, colored the type overview table

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div>
 				<textarea id="codeInput" name="codeInput" cols="50" rows="20" wrap="off" placeholder="([x, y]) => {return [x + y];}"></textarea>
 			</div>
-			<button>Generate</button>
+			<button id="generate-button">Generate</button>
 			<div class="initially-hidden">
 				<p id="bank-statistics"></p>
 				<p>Elapsed: <span id="elapsed-time-display">N/A</span></p>
