--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 			<h2>Generated Data</h2>
 			<button id="recursive-copy-button">Copy all (for Gboard and clipboard-stack)</button>
 			<button id="slower-recursive-copy-button">Copy all slowly (for windows+v)</button>
-			<p>Copying all data requires my <a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard Stack</a> macro. Or other software that can track fast clipboard changes like Google's GBoard app (Windows + V is too slow to keep up).</p>
+			<p>
+				Copying all data requires software that can track clipboard changes like my 
+				<a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard Stack</a>
+				macro, Google's GBoard app or Windows + V.
+			</p>
 			<div id="bank-data-output"></div>
 		</section>
 		<section class="initially-hidden">
