--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 <body>
 	<header>
 		<img src="assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
-		<h1 class="inline">Memory Bank Generator</h1>
-		<h2>For Survicalcraft</h2>
+		<h1 class="inline">Memory Bank Generator For Survivalcraft</h1>
 		<nav>
 			<ul>
-				<li><b><a href="./docs.html">Click here to read the Documentation</a></b></li>
+				<li><b><a href="./docs.html">Documentation</a></b></li>
 				<li><a href="https://sp4cebar.com/">Home</a></li>
 			</ul>
 		</nav>
@@ -57,12 +56,12 @@
 		<section class="initially-hidden">
 			<hr />
 			<h2>Generated Data</h2>
-			<button id="recursive-copy-button">Copy all (for Gboard and clipboard-stack)</button>
+			<button id="recursive-copy-button">Copy all (for Gboard or Clipboard-Stack)</button>
 			<button id="slower-recursive-copy-button">Copy all slowly (for windows+v)</button>
 			<p>
 				Copying all data requires software that can track clipboard changes like my 
-				<a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard Stack</a>
-				macro, Google's GBoard app or Windows + V.
+				<a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard-Stack</a>
+				macro, Google's GBoard app or windows' clipboard history (aka windows + V).
 			</p>
 			<div id="bank-data-output"></div>
 		</section>
