added horizontal scrolling to fixed-width elements so they can't widen the page

--- a/index.html
+++ b/index.html
@@ -68,16 +68,18 @@
 		<section class="initially-hidden">
 			<hr />
 			<h2>Circuit</h2>
-			<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
+			<div class="horizontal-scroll">
+				<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
+			</div>
 			<p>Feel free to simplify the circuit in your own implementation.</p>
 		</section>
 		<section class="initially-hidden">
 			<hr />
 			<h2>IO Overview</h2>
 			<h3>Input</h3>
-			<div id="bank-input-type-table"></div>
+			<div id="bank-input-type-table" class="horizontal-scroll"></div>
 			<h3>Output</h3>
-			<div id="bank-output-type-table"></div>
+			<div id="bank-output-type-table" class="horizontal-scroll"></div>
 		</section>
 		
 		<!-- define symbol in hidden svg document -->
