Enhanced the nav bar with horizontal icon shapes

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 </head>
 <body>
 	<header>
-		<img src="assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
-		<h1 class="inline">Memory Bank Generator For Survivalcraft</h1>
 		<nav>
-			<ul>
-				<li><b><a href="./docs.html">Documentation</a></b></li>
-				<li><a href="https://sp4cebar.com/">Home</a></li>
-			</ul>
+			<a href="https://sp4cebar.com/" class="sp4cebar-image"></a>
+			<a href="./index.html" class="sp4cebank-image"></a>
+			<a href="./docs.html">Documentation</a>
 		</nav>
+		<hr/>
+		<h1 class="inline">Memory Bank Generator For Survivalcraft</h1>
 	</header>
 	<main>
 		<hr/>
