--- a/docs.html
+++ b/docs.html
@@ -11,13 +11,13 @@
 
 <body>
 	<header>
-		<img src="assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
-		<h1 class="inline">Documentation</h1>
 		<nav>
-			<ul>
-				<li><a href="./index.html">Generator Home</a></li>
-			</ul>
+			<a href="https://sp4cebar.com/" class="sp4cebar-image"></a>
+			<a href="./index.html" class="sp4cebank-image"></a>
+			<a href="./docs.html">Documentation</a>
 		</nav>
+		<hr/>
+		<h1 class="inline">Documentation</h1>
 	</header>
 	<main>
 		<hr>
