Added a color marking to the currently open nav page link

--- a/docs.html
+++ b/docs.html
@@ -14,7 +14,7 @@
 		<nav>
 			<a href="https://sp4cebar.com/" class="sp4cebar-image"></a>
 			<a href="./index.html" class="sp4cebank-image"></a>
-			<a href="./docs.html">Documentation</a>
+			<a href="./docs.html" class="selected">Documentation</a>
 		</nav>
 		<hr/>
 		<h1 class="inline">Documentation</h1>
