--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<nav>
 			<a href="https://sp4cebar.com/" class="sp4cebar-image"></a>
-			<a href="./index.html" class="sp4cebank-image"></a>
+			<a href="./index.html" class="sp4cebank-image selected"></a>
 			<a href="./docs.html">Documentation</a>
 		</nav>
 		<hr/>
