Fixed the nav images not showing up on github pages for the docs page as well, and attempted to fix the image scaling on github pages

--- a/docs.html
+++ b/docs.html
@@ -13,10 +13,10 @@
 	<header>
 		<nav>
 			<a href="https://sp4cebar.com/" class="sp4cebar-image">
-				<img src="/assets/sp4cebar logo 100x100.jpg" alt="sp4cebar logo">				
+				<img src="./assets/sp4cebar logo 100x100.jpg" alt="sp4cebar logo">				
 			</a>
 			<a href="./index.html" class="sp4cebank-image">
-				<img src="/assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo">				
+				<img src="./assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo">				
 			</a>
 			<a href="./docs.html" class="selected">Documentation</a>
 		</nav>
