Added the bank-names section with content to the docs

--- a/docs.html
+++ b/docs.html
@@ -418,68 +418,68 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 				bits)<br>
 				<h4>Unsigned Integer Examples</h4>
 				<div class="horizontal-scroll">
-				<table border="1">
-					<tr>
-						<th>Type</th>
-						<th>Bits</th>
-						<th>Range</th>
-					</tr>
-					<tr>
-						<td>U_INT_1</td>
-						<td>1-bit</td>
-						<td>0 to 1</td>
-					</tr>
-					<tr>
-						<td>U_INT_2</td>
-						<td>2-bit</td>
-						<td>0 to 3</td>
-					</tr>
-					<tr>
-						<td>U_INT_3</td>
-						<td>3-bit</td>
-						<td>0 to 7</td>
-					</tr>
-					<tr>
-						<td>U_INT_4</td>
-						<td>4-bit</td>
-						<td>0 to 15</td>
-					</tr>
-					<tr>
-						<td>U_INT_5</td>
-						<td>5-bit</td>
-						<td>0 to 31</td>
-					</tr>
-					<tr>
-						<td>U_INT_6</td>
-						<td>6-bit</td>
-						<td>0 to 63</td>
-					</tr>
-					<tr>
-						<td>U_INT_7</td>
-						<td>7-bit</td>
-						<td>0 to 127</td>
-					</tr>
-					<tr>
-						<td>U_INT_8</td>
-						<td>8-bit</td>
-						<td>0 to 255</td>
-					</tr>
-					<tr>
-						<td>U_INT_16</td>
-						<td>16-bit</td>
-						<td>0 to 65,535</td>
-					</tr>
-					<tr>
-						<td>U_INT_32</td>
-						<td>32-bit</td>
-						<td>0 to 4,294,967,295</td>
-					</tr>
-					<tr>
-						<td>U_INT_64</td>
-						<td>64-bit</td>
-						<td>0 to 18,446,744,073,709,551,615</td>
-					</tr>
-				</table>
+					<table border="1">
+						<tr>
+							<th>Type</th>
+							<th>Bits</th>
+							<th>Range</th>
+						</tr>
+						<tr>
+							<td>U_INT_1</td>
+							<td>1-bit</td>
+							<td>0 to 1</td>
+						</tr>
+						<tr>
+							<td>U_INT_2</td>
+							<td>2-bit</td>
+							<td>0 to 3</td>
+						</tr>
+						<tr>
+							<td>U_INT_3</td>
+							<td>3-bit</td>
+							<td>0 to 7</td>
+						</tr>
+						<tr>
+							<td>U_INT_4</td>
+							<td>4-bit</td>
+							<td>0 to 15</td>
+						</tr>
+						<tr>
+							<td>U_INT_5</td>
+							<td>5-bit</td>
+							<td>0 to 31</td>
+						</tr>
+						<tr>
+							<td>U_INT_6</td>
+							<td>6-bit</td>
+							<td>0 to 63</td>
+						</tr>
+						<tr>
+							<td>U_INT_7</td>
+							<td>7-bit</td>
+							<td>0 to 127</td>
+						</tr>
+						<tr>
+							<td>U_INT_8</td>
+							<td>8-bit</td>
+							<td>0 to 255</td>
+						</tr>
+						<tr>
+							<td>U_INT_16</td>
+							<td>16-bit</td>
+							<td>0 to 65,535</td>
+						</tr>
+						<tr>
+							<td>U_INT_32</td>
+							<td>32-bit</td>
+							<td>0 to 4,294,967,295</td>
+						</tr>
+						<tr>
+							<td>U_INT_64</td>
+							<td>64-bit</td>
+							<td>0 to 18,446,744,073,709,551,615</td>
+						</tr>
+					</table>
 				</div>
 
 				<!-- <ul>
@@ -494,7 +494,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 
 				<h4>Other Unsigned Integer Forms</h4>
 				<div class="horizontal-scroll">
-				<table border="1">
+					<table border="1">
 					<tr>
 						<th>Type</th>
 						<th>Equivalent To</th>
@@ -543,7 +543,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 						<td>1-bit</td>
 						<td>0 to 1</td>
 					</tr>
-				</table>
+					</table>
 				</div>
 
 				<!-- <ul>
@@ -574,7 +574,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 				bits)<br>
 				<h4>2s Complement Signed Integer Examples</h4>
 				<div class="horizontal-scroll">
-				<table border="1">
+					<table border="1">
 					<tr>
 						<th>Type</th>
 						<th>Bits</th>
@@ -635,7 +635,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 						<td>64-bit</td>
 						<td>-9,223,372,036,854,775,808 to 9,223,372,036,854,775,807</td>
 					</tr>
-				</table>
+					</table>
 				</div>
 
 				<h4>Sign-Magnitude Signed Integers</h4>
@@ -651,7 +651,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 
 				<h4>Sign-Magnitude Signed Integer Examples</h4>
 				<div class="horizontal-scroll">
-				<table border="1">
+					<table border="1">
 					<tr>
 						<th>Type</th>
 						<th>Bits</th>
@@ -712,7 +712,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 						<td>64-bit</td>
 						<td>-9,223,372,036,854,775,807 to +9,223,372,036,854,775,807</td>
 					</tr>
-				</table>
+					</table>
 				</div>
 
 				<!-- <ul>
@@ -748,6 +748,48 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 			</p>
 		</section>
 		<hr>
+		<section id="bank-names">
+			<h2>Bank Names</h2>
+			<p>
+				Each memory bank has a code-name, these are shown above the data for banks and on the generated circuit. in these names the L, I, and D stand for Location, Input, and Digit respectively.
+				Here is an overview:
+			</p>
+			<div class="horizontal-scroll">
+				<table border="1">
+					<tbody>
+						<tr>
+							<th>Parameter</th>
+							<th>Function</th>
+							<th>If the value was 0</th>
+							<th>If the value was 1</th>
+							<th>If the value was 2</th>
+						</tr>
+						<tr>
+							<td>location</td>
+							<td>the set of banks it is part of</td>
+							<td>first set</td>
+							<td>second set</td>
+							<td>third set</td>
+						</tr>
+						<tr>
+							<td>input</td>
+							<td>responsible for handling a set of 256 input values</td>
+							<td>values 0 to 255</td>
+							<td>values 256 to 511</td>
+							<td>values 512 to 767</td>
+						</tr>
+						<tr>
+							<td>digit</td>
+							<td>to generate the set of four bits of the output</td>
+							<td>bits 0 to 3</td>
+							<td>bits 4 to 7</td>
+							<td>bits 8 to 11</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</section>
+		<hr>
 		<section id="data">
 			<h2>Data</h2>
 			<p>
@@ -767,78 +809,78 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 			address input and a 4-bit output.
 			The amount of memory banks required is:
 			<div class="horizontal-scroll">
-			<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
-				<mrow>
-					<mi>banks</mi>
-					<mo>=</mo>
-					<mi>Locations</mi>
-					<mo>&#xD7;</mo>
+				<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
 					<mrow>
-						<mi>floor</mi>
-						<mo>(</mo>
-						<mfrac>
-							<mi>OutputSize</mi>
-							<mn>4</mn>
-						</mfrac>
-						<mo>)</mo>
-					</mrow>
-					<mo>&#xD7;</mo>
-					<msup>
-						<mn>2</mn>
+						<mi>banks</mi>
+						<mo>=</mo>
+						<mi>Locations</mi>
+						<mo>&#xD7;</mo>
 						<mrow>
-							<mi>max</mi>
+							<mi>floor</mi>
 							<mo>(</mo>
-							<mn>0</mn>
-							<mo>,</mo>
-							<mrow>
-								<mi>InputSize</mi>
-								<mo>-</mo>
-								<mn>8</mn>
-							</mrow>
+							<mfrac>
+								<mi>OutputSize</mi>
+								<mn>4</mn>
+							</mfrac>
 							<mo>)</mo>
 						</mrow>
-					</msup>
-				</mrow>
-			</math>
+						<mo>&#xD7;</mo>
+						<msup>
+							<mn>2</mn>
+							<mrow>
+								<mi>max</mi>
+								<mo>(</mo>
+								<mn>0</mn>
+								<mo>,</mo>
+								<mrow>
+									<mi>InputSize</mi>
+									<mo>-</mo>
+									<mn>8</mn>
+								</mrow>
+								<mo>)</mo>
+							</mrow>
+						</msup>
+					</mrow>
+				</math>
 			</div>
 
 			This calculation should be shown automatically each time data is generated.<br>
 			As you can see the input size scales exponentially: for one 4-bit-output-and-16-bit-input system you need
 			256 banks:
 			<div class="horizontal-scroll">
-			<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
-				<mrow>
-					<mi>(1)</mi>
-					<mo>&#xD7;</mo>
+				<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
 					<mrow>
-						<mi>floor</mi>
-						<mo>(</mo>
-						<mfrac>
-							<mi>(4)</mi>
-							<mn>4</mn>
-						</mfrac>
-						<mo>)</mo>
-					</mrow>
-					<mo>&#xD7;</mo>
-					<msup>
-						<mn>2</mn>
+						<mi>(1)</mi>
+						<mo>&#xD7;</mo>
 						<mrow>
-							<mi>max</mi>
+							<mi>floor</mi>
 							<mo>(</mo>
-							<mn>0</mn>
-							<mo>,</mo>
-							<mrow>
-								<mi>(16)</mi>
-								<mo>-</mo>
-								<mn>8</mn>
-							</mrow>
+							<mfrac>
+								<mi>(4)</mi>
+								<mn>4</mn>
+							</mfrac>
 							<mo>)</mo>
 						</mrow>
-					</msup>
-				</mrow>
-				<mo>=</mo>
-				<mi>256</mi>
-			</math>
+						<mo>&#xD7;</mo>
+						<msup>
+							<mn>2</mn>
+							<mrow>
+								<mi>max</mi>
+								<mo>(</mo>
+								<mn>0</mn>
+								<mo>,</mo>
+								<mrow>
+									<mi>(16)</mi>
+									<mo>-</mo>
+									<mn>8</mn>
+								</mrow>
+								<mo>)</mo>
+							</mrow>
+						</msup>
+					</mrow>
+					<mo>=</mo>
+					<mi>256</mi>
+				</math>
 			</div>
 
 			</p>
