--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 		</nav>
 		<hr/>
 		<h1 class="inline">Memory Bank Generator For Survivalcraft</h1>
+		<p>
+			This tool allows you to easily program the data for <a href="https://survivalcraftgame.fandom.com/wiki/Memory_Bank">memory bank</a> systems in <a href="https://en.wikipedia.org/wiki/Survivalcraft">Survivalcraft</a>.
+		</p>
 	</header>
 	<main>
 		<hr/>
 		<section>
 			<h2>Presets</h2>
+			<p>Click on one of the presets below to load its code and parameters.</p>
 			<div id="preset-selector">
 			</div>
 			<h3 id="preset-name"></h3>
@@ -36,6 +40,10 @@
    <hr />
 		<section>
 			<h2>Code</h2>
+			<p>
+				Here you can type <a href="./docs.html#code">code</a> and <a href="./docs.html#types">parameters</a>.
+				Click generate to generate memory bank data, a representation of the circuit to build in Survivalcraft, and an overview table of the inputs and outputs of the circuit.
+			</p>
 			<div class="space-Below generator-input-params">
 				<label for="amountInput">amount (scales linearly)</label>
 				<input id="amount" name="amountInput" value="1" placeholder="1"></input>
@@ -58,19 +66,10 @@
 		</section>
 		<section class="initially-hidden">
 			<hr />
-			<h2>Generated Data</h2>
-			<button id="recursive-copy-button">Copy all (for Gboard or Clipboard-Stack)</button>
-			<button id="slower-recursive-copy-button">Copy all slowly (for windows+v)</button>
-			<p>
-				Copying all data requires software that can track clipboard changes like my 
-				<a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard-Stack</a>
-				macro, Google's GBoard app or windows' clipboard history (aka windows + V).
-			</p>
-			<div id="bank-data-output"></div>
-		</section>
-		<section class="initially-hidden">
-			<hr />
 			<h2>Circuit</h2>
+			<p>
+				Below is a representation of the circuit to be built in Survivalcraft to accomodate the generated system.
+			</p>
 			<div class="horizontal-scroll">
 				<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
 			</div>
@@ -79,10 +78,29 @@
 		<section class="initially-hidden">
 			<hr />
 			<h2>IO Overview</h2>
+			<p>
+				Below is a representation of the inputs and outputs of the circuit above, this desribes the system to you so that you can integrate it with other systems in Survivalcraft.
+			</p>
 			<h3>Input</h3>
 			<div id="bank-input-type-table" class="horizontal-scroll"></div>
 			<h3>Output</h3>
 			<div id="bank-output-type-table" class="horizontal-scroll"></div>
+		</section>
+		<section class="initially-hidden">
+			<hr />
+			<h2>Generated Data</h2>
+			<p>
+				The data below should be copied and pasted into the Survivalcraft memory banks shown in the circuit above one by one. 
+				The <a href="./docs.html#bank-names">code-names</a> of these banks are also shown on the circuit.
+			</p>
+			<button id="recursive-copy-button">Copy all (for Gboard or Clipboard-Stack)</button>
+			<button id="slower-recursive-copy-button">Copy all slowly (for windows+v)</button>
+			<p>
+				Copying all data requires software that can track clipboard changes like my 
+				<a href="https://github.com/SP4CEBARsystems/clipboard-stack" target="_blank" rel="noopener noreferrer">Clipboard-Stack</a>
+				macro, Google's GBoard app or windows' clipboard history (aka windows + V).
+			</p>
+			<div id="bank-data-output"></div>
 		</section>
 		
 		<!-- define symbol in hidden svg document -->
