--- a/docs.html
+++ b/docs.html
@@ -751,7 +751,7 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 		<section id="bank-names">
 			<h2>Bank Names</h2>
 			<p>
-				Each memory bank has a code-name, these are shown above the data for banks and on the generated circuit. in these names the L, I, and D stand for Location, Input, and Digit respectively.
+				Each memory bank has a code-name, these are shown above the data for banks and on the generated circuit. In these names the L, I, and D stand for Location, Input, and Digit respectively.
 				Here is an overview:
 			</p>
 			<div class="horizontal-scroll">
@@ -774,16 +774,16 @@ output sizes: 4</pre><pre class="code-block-root has-copy-btn"><code class="code
 						<tr>
 							<td>input</td>
 							<td>responsible for handling a set of 256 input values</td>
-							<td>values 0 to 255</td>
-							<td>values 256 to 511</td>
-							<td>values 512 to 767</td>
+							<td>input values 0 to 255</td>
+							<td>input values 256 to 511</td>
+							<td>input values 512 to 767</td>
 						</tr>
 						<tr>
 							<td>digit</td>
-							<td>to generate the set of four bits of the output</td>
-							<td>bits 0 to 3</td>
-							<td>bits 4 to 7</td>
-							<td>bits 8 to 11</td>
+							<td>to generate a set of four bits of the output</td>
+							<td>output bits 0 to 3</td>
+							<td>output bits 4 to 7</td>
+							<td>output bits 8 to 11</td>
 						</tr>
 					</tbody>
 				</table>
